# manus-mcp

./: .env.example  .gitignore  README.md  claude_desktop_config.json  mcp_server.py  pyproject.toml  run.py  setup.sh
app/: __init__.py  code_execution.py  main.py  search.py  web_browser.py
scripts/: rebuild_venv.sh
